--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-simple-typewriter": "^5.0.1",
-    "swiper": "^11.1.0"
+    "react-tsparticles": "^2.9.3",
+    "swiper": "^11.1.0",
+    "tsparticles": "^2.9.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
